# ohms-2.0

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  fund_canisters.sh  merge-repos.sh  package-lock.json  package.json  report_canisters.sh
.dfx/local/: canister_ids.json  wallets.json
.dfx/local/lsp/: umunu-kh777-77774-qaaca-cai.did
.dfx/network/local/: network-id  replica-effective-config.json
docs/: OHMS-MASTER-PLAN.md  admin-user-separation-plan.md  ohms-2.0-prp.md  ohms-2.0-revamped-whitepaper.md  ohms-fullstack-architecture.md  ohms-revenue-model.md  principal-authentication-architecture.md  system-architecture-diagrams.md
docs/docs/: novaq.md  ohms-2.0-prd.md  ohms-2.0-prp.md  ohms-2.0-revamped-whitepaper.md  ohms-revenue-model.md  principal-authentication-architecture.md
novaq/: Cargo.toml  README.md  synthetic.gguf  synthetic.safetensors
novaq/compressed-demo/: manifest.json
novaq/examples/: stream_from_hf.sh
novaq/novaq-cli/: Cargo.toml
novaq/novaq-cli/src/: main.rs
novaq/novaq-core/: Cargo.toml
novaq/novaq-core/benches/: normalization_bench.rs  quantizer_bench.rs
novaq/novaq-core/src/: analysis.rs  config.rs  error.rs  lib.rs  metrics.rs  model.rs  normalization.rs  quantization.rs  subspace.rs  validation.rs
novaq/novaq-io/: Cargo.toml
novaq/novaq-io/benches/: loader_bench.rs
novaq/novaq-io/src/: artifact.rs  format.rs  gguf.rs  hf_api.rs  huggingface.rs  lib.rs  manifest.rs  progress.rs  safetensors.rs  streaming_gguf.rs  streaming_reader.rs  streaming_safetensors.rs  streaming_safetensors_v2.rs  tests.rs
novaq/novaq-manifest/: Cargo.toml
novaq/novaq-manifest/src/: lib.rs
novaq/novaq-recovery/: Cargo.toml
novaq/novaq-recovery/src/: lib.rs
novaq/novaq-verify/: Cargo.toml
novaq/novaq-verify/src/: lib.rs
novaq/synthetic-artifacts/: manifest.json
novaq/synthetic-artifacts-gguf/: manifest.json
novaq/test-artifacts/: manifest.json
novaq/test-artifacts-final/: manifest.json
novaq/test-artifacts-gguf/: manifest.json
novaq/test-artifacts-safetensors/: manifest.json
novaq/test-artifacts10/: manifest.json
novaq/test-artifacts2/: manifest.json
novaq/test-artifacts3/: manifest.json
novaq/test-artifacts4/: manifest.json
novaq/test-artifacts5/: manifest.json
novaq/test-artifacts6/: manifest.json
novaq/test-artifacts7/: manifest.json
novaq/test-artifacts8/: manifest.json
novaq/test-artifacts9/: manifest.json
novaq/test-last/: manifest.json
novaq/test-simple/: manifest.json
ohms-adaptq/: README.md
ohms-adaptq/src/: compression.rs  lib.rs  model_fetcher.rs  real_model_loader.rs  streaming_loader.rs  universal_loader.rs
ohms-adaptq/src/manifest/: mod.rs
ohms-adaptq/src/novaq/: codebooks.rs  distillation.rs  mod.rs  normalization.rs  numerical_stability.rs  progress.rs  recovery.rs  refinement.rs  subspace_strategy.rs
ohms-adaptq/src/verification/: mod.rs
ohms-agent/: Cargo.toml
ohms-agent/src/: api.rs  lib.rs  ohms_agent.did
ohms-agent/src/domain/: agent.rs  coordination.rs  inference.rs  instruction.rs  mod.rs  performance.rs  task.rs  validation.rs
ohms-agent/src/infra/: guards.rs  metrics.rs  mod.rs
ohms-agent/src/services/: agent_factory.rs  binding_service.rs  cache_service.rs  collaboration.rs  inference_service.rs  instruction_analyzer.rs  memory_service.rs  mod.rs  model_repo_client.rs
ohms-coordinator/: Cargo.toml
ohms-coordinator/src/: api.rs  lib.rs  ohms_coordinator.did
ohms-coordinator/src/config/: llm_providers.rs  mod.rs
ohms-coordinator/src/domain/: mod.rs  orchestration.rs
ohms-coordinator/src/infra/: guards.rs  metrics.rs
ohms-coordinator/src/services/: agent_spawning.rs  autonomous_coord.rs  dedup.rs  econ_integration.rs  http_outcall.rs  instruction_analyzer.rs  mod.rs  orchestration.rs  quota_manager.rs  registry.rs  routing.rs
ohms-econ/: Cargo.toml
ohms-econ/src/: lib.rs
ohms-econ/src/services/: subscription.rs
ohms-model/: Cargo.toml
ohms-model/src/: lib.rs
ohms-shared/: Cargo.toml
ohms-shared/src/: communication.rs  lib.rs  llm_client.rs  novaq.rs  registry.rs  types.rs
ohms-ui/: .ic-assets.json5  README.md  canister_ids.json  package.json  pnpm-lock.yaml  vite.config.ts
ohms-ui/src/: App.tsx  index.css  main.tsx
ohms-ui/src/components/: Header.tsx  SystemStatus.tsx
ohms-ui/src/config/: canisters.ts  network.ts
ohms-ui/src/context/: AgentContext.tsx
ohms-ui/src/hooks/: useAdmin.ts  useTaskProgress.ts
ohms-ui/src/pages/: Admin.tsx  AdminNovaq.tsx  AgentCreator.tsx  Agents.tsx  Coordinator.tsx  Features.tsx  LLMSettings.tsx  ModelCatalog.tsx  ModelChat.tsx  MultiAgentOrchestrator.tsx  TaskDetailView.tsx  UserAgentCreator.tsx
ohms-ui/src/services/: agentCreationService.ts  apiClient.ts  canisterService.ts  directLlmService.ts  internetIdentityService.ts  llmService.ts  orchestrationService.ts
ohms-ui/src/utils/: consoleErrorFilter.ts  consoleOverride.ts  globalErrorHandler.ts
ohms-website/: .gitignore  .ic-assets.json5  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  pnpm-lock.yaml
ohms-website/ohms-website/: next.config.ts  postcss.config.mjs  tailwind.config.js
ohms-website/ohms-website/public/: robots.txt  sitemap.xml
ohms-website/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
scripts/: build-all.sh  deploy-all.sh  dev-all.sh  setup-monorepo.sh  test-all.sh  test-api-keys.sh
shared-types/: index.ts  ohms-service.ts  package.json
(+97 files in other folders)
