[workspace]
resolver = "2"
members = [
    "ohms-shared",
    "ohms-agent",
    "ohms-coordinator",
    "ohms-econ",
    "ohms-model"
]

[workspace.dependencies]
# Internet Computer dependencies
ic-cdk = "0.15"
ic-cdk-macros = "0.15"
candid = "0.10"
ic-stable-structures = "0.6"

# Core dependencies used across all components
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
sha2 = "0.10"
hex = "0.4"
bincode = "1.3"
rand = "0.8"
rand_chacha = "0.3"
base64 = "0.21"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
futures = "0.3"

# Common utilities for WASM targets
getrandom = { version = "0.2", features = ["custom"] }

# OHMS internal dependencies
ohms-shared = { path = "ohms-shared" }
