[workspace]
resolver = "2"
members = [
    "novaq-core",
    "novaq-io",
    "novaq-recovery",
    "novaq-verify",
    "novaq-manifest",
    "novaq-cli"
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
approx = "0.5"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
indicatif = "0.17"
ndarray = { version = "0.15", features = ["approx", "blas", "serde"] }
ndarray-rand = "0.14"
num-traits = "0.2"
prettytable-rs = "0.10"
proptest = "1.5"
rand = { version = "0.8", features = ["std", "small_rng"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["serde", "env-filter"] }
itertools = "0.12"
smallvec = "1.13"
criterion = { version = "0.5", features = ["html_reports"] }
