[package]
name = "ohms-shared"
version = "1.0.0"
edition = "2021"
description = "Shared types and utilities for the OHMS ecosystem"
license = "MIT"

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
futures = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ohms-adaptq = { path = "../ohms-adaptq" }
