[package]
name = "novaq-cli"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
novaq-core = { path = "../novaq-core" }
novaq-io = { path = "../novaq-io" }
novaq-manifest = { path = "../novaq-manifest" }
ndarray.workspace = true
rand.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { version = "1.41", features = ["rt", "rt-multi-thread", "macros", "fs", "io-util"] }
indicatif.workspace = true
