[package]
name = "novaq-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
approx.workspace = true
itertools.workspace = true
ndarray.workspace = true
ndarray-rand.workspace = true
num-traits.workspace = true
rand.workspace = true
rayon.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
rand = { workspace = true, features = ["std"] }
criterion.workspace = true

[[bench]]
name = "quantizer_bench"
harness = false

[[bench]]
name = "normalization_bench"
harness = false
