[package]
name = "novaq-io"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
novaq-core = { path = "../novaq-core" }
novaq-manifest = { path = "../novaq-manifest" }
sha2.workspace = true
blake3.workspace = true
hex = "0.4"
ndarray.workspace = true
base64 = "0.22"
url = "2.5"
bytes = "1.7"
futures.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1.41", features = ["rt", "rt-multi-thread", "macros", "fs", "io-util"] }
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
parking_lot = "0.12"
thiserror.workspace = true
half = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.41", features = ["rt", "rt-multi-thread", "macros", "fs", "io-util", "test-util"] }
criterion.workspace = true

[[bench]]
name = "loader_bench"
harness = false
