[package]
name = "novaq-manifest"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
schemars = { version = "0.8", features = ["chrono"] }
chrono = { workspace = true, features = ["serde"] }
hex = "0.4"

[dev-dependencies]
serde_json.workspace = true
